dev/manifests/explore-california-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: explore-california-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx # Replace 'nginx' with the correct IngressClass name if different
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: explore-california
            port:
              number: 80
